--- a/portland/index.html
+++ b/portland/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Chris Heuberger | Travel Chronicle</title>
+    <title>Portland, OR</title>
     <!-- DEFAULT META TAGS -->
 
     <!-- FONTS -->
@@ -35,12 +35,14 @@
 
         <div class="spacer spacer-small"></div>
         <h3>Coming soon, maybe later:</h3>
-        <h1>My Favoite Part Was Everything: A Travel Chronicle by Chris Heuberger</h1>
+        <h1>Our Trip to Portland, OR</h1>
 
-        <p><a href="/our-trip-to-peru">Peru</a></p>
-        <p><a href="/santa-fe">Santa Fe</a></p>
-        <p><a href="/portland">Portland, OR</a></p>
-        <p><a href="/scandinavia">Scandinavia</a></p>
+        <p><a href="https://drive.google.com/open?id=1VwC7lL9jTC7VcO2kV63jTi1ZkHc&usp=sharing">View in Google Maps</a></p>
+        <iframe src="https://www.google.com/maps/d/u/2/embed?mid=1VwC7lL9jTC7VcO2kV63jTi1ZkHc" width="640" height="480"></iframe>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/skJcIPOGXDk" frameborder="0" allowfullscreen></iframe>
+
+        <p><a href="/travel/">Back to Travel</a></p>
 
       </div>
     </section>
