--- a/scandinavia/index.html
+++ b/scandinavia/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Chris Heuberger | Travel Chronicle</title>
+    <title>Scandinavia</title>
     <!-- DEFAULT META TAGS -->
 
     <!-- FONTS -->
@@ -36,6 +36,9 @@
         <div class="spacer spacer-small"></div>
         <h3>Coming soon, maybe later:</h3>
         <h1>Our Trip to Scandinavia</h1>
+
+        <p><a href="https://drive.google.com/open?id=1SJWxnFDtJlWOqgQG4ytVhTLNup4&usp=sharing">View in Google Maps</a></p>
+        <iframe src="https://www.google.com/maps/d/u/2/embed?mid=1SJWxnFDtJlWOqgQG4ytVhTLNup4" width="640" height="480"></iframe>
 
         <p><a href="/travel/">Back to Travel</a></p>
 
