reword santa fe

--- a/santa-fe/index.html
+++ b/santa-fe/index.html
@@ -68,7 +68,7 @@
     <section id="page-body">
 
       <div class="wrapper">
-        <h3 class="align-center"><strong>A Travel Chronicle by Chris Heuberger</strong></h3>
+        <h3 class="align-center"><strong>Our trip to the southwest by Chris Heuberger</strong></h3>
         <div class="spacer spacer-medium"></div>
         <div id="portfolio-grid" class="masonry clearfix" data-maxitemwidth="400">
 
