--- a/travel/scandinavia.html
+++ b/travel/scandinavia.html
@@ -34,7 +34,7 @@
   <div id="page-loader">
     <div class="page-loader-inner">
       <div class="loader">
-        <strong>we have touch down…</strong>
+        <strong>we have touch down...</strong>
       </div>
     </div>
   </div>
@@ -42,7 +42,7 @@
   <div id="page-content">
 
     <!-- HERO  -->
-    <section class="hero-full parallax-section text-light" data-parallax-image="files/uploads/norway/IMG_7253.jpg" id="hero">
+    <section class="hero-full parallax-section text-light" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7253.jpg" id="hero">
       <p class="align-center"><a href="index.html">BACK TO TRAVEL</a></p>
       <div class="page-title">
         <h1>Scandinavia<br>May, 2017</h1>
@@ -59,7 +59,7 @@
           <div class="wolf-item wfull wright wolf-text" data-speed="1.3">
             <div class="wolf-item-inner" style="width:60%;">
               <div class="wolf-media">
-                <img alt="SEO NAME" src="files/uploads/denmark/IMG_6790.jpg">
+                <img alt="SEO NAME" src="https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6790.jpg">
               </div>
               <div class="wolf-caption" style="width:50%;">
                 <a class="go-to-there" href="denmark.html">
@@ -73,7 +73,7 @@
           <div class="wolf-item wfull wleft wolf-text" data-speed="1.6">
             <div class="wolf-item-inner" style="width:60%;">
               <div class="wolf-media">
-                <img alt="SEO NAME" src="files/uploads/norway/IMG_7384.jpg">
+                <img alt="SEO NAME" src="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7384.jpg">
               </div>
               <div class="wolf-caption" style="width:50%;">
                 <a class="go-to-there" href="norway.html">
@@ -94,7 +94,7 @@
         <div class="spacer spacer-small"></div>
           
         <div class="inline-video" data-type="youtube" data-videoid="l7mlfXnvEsQ">
-          <img src="files/uploads/norway/IMG_7419.jpg" alt="Scandinavia">
+          <img src="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7419.jpg" alt="Scandinavia">
         </div>
 
         <div class="spacer spacer-small"></div>
