--- a/travel/index.html
+++ b/travel/index.html
@@ -34,9 +34,7 @@
   <!-- PAGELOADER -->
   <div id="page-loader">
     <div class="page-loader-inner">
-      <div class="loader">
-        <strong>hallo</strong>
-      </div>
+      <div class="loader">hallo</div>
     </div>
   </div>
 
@@ -63,8 +61,8 @@
               </div>
               <div class="wolf-caption portfolio-caption peru-caption">
                 <a class="wolf-caption-link" href="peru/index.html">
-                <h6 class="alttitle portfolio-category">Peru</h6>
-                <h4 class="portfolio-name"><strong>2015</strong></h4></a>
+                <h6 class="peru-header alttitle portfolio-category">Peru</h6>
+                <h4 class="peru-subheader portfolio-name">2015</h4></a>
               </div>
             </div>
           </div>
@@ -76,8 +74,8 @@
               </div>
               <div class="wolf-caption cbottom portfolio-caption" style="margin-right: 8%">
                 <a class="wolf-caption-link" href="portland-summer-2016.html">
-                <h6 class="alttitle portfolio-category">Portland, OR</h6>
-                <h4 class="portfolio-name"><strong>Summer 2016</strong></h4></a>
+                <h6 class="portland-sumemr-2016-header alttitle portfolio-category">Portland, OR</h6>
+                <h4 class="portland-sumemr-2016-subheader portfolio-name">Summer 2016</h4></a>
               </div>
             </div>
           </div>
@@ -89,8 +87,8 @@
               </div>
               <div class="wolf-caption cbottom portfolio-caption" style="margin-right: 8%">
                 <a class="wolf-caption-link" href="new-orleans.html">
-                <h6 class="alttitle portfolio-category">New Orleans</h6>
-                <h4 class="portfolio-name"><strong>2016</strong></h4></a>
+                <h6 class="new-orleans-header alttitle portfolio-category">New Orleans</h6>
+                <h4 class="new-orleans-subheader portfolio-name">2016</h4></a>
               </div>
             </div>
           </div>
@@ -102,8 +100,8 @@
               </div>
               <div class="wolf-caption portfolio-caption" style="margin-bottom:20%;">
                 <a class="wolf-caption-link" href="santa-fe.html">
-                <h6 class="alttitle portfolio-category">Santa Fe</h6>
-                <h4 class="portfolio-name"><strong>2016</strong></h4></a>
+                <h6 class="santa-fe-header alttitle portfolio-category">Santa Fe</h6>
+                <h4 class="santa-fe-subheader portfolio-name">2016</h4></a>
               </div>
             </div>
           </div>
@@ -115,8 +113,8 @@
               </div>
               <div class="wolf-caption portfolio-caption" style="margin-top:10%;">
                 <a class="wolf-caption-link" href="portland-winter-2016.html">
-                <h6 class="alttitle portfolio-category">Portland, OR</h6>
-                <h4 class="portfolio-name"><strong>Winter 2016</strong></h4></a>
+                <h6 class="portland-winter-2016-header alttitle portfolio-category">Portland, OR</h6>
+                <h4 class="portland-winter-2016-subheader portfolio-name">Winter 2016</h4></a>
               </div>
             </div>
           </div>
@@ -128,8 +126,8 @@
               </div>
               <div class="wolf-caption portfolio-caption">
                 <a class="wolf-caption-link" href="scandinavia.html">
-                <h6 class="alttitle portfolio-category">Scandinavia</h6>
-                <h4 class="portfolio-name"><strong>2017</strong></h4></a>
+                <h6 class="scandinavia-header alttitle portfolio-category">Scandinavia</h6>
+                <h4 class="scandinavia-subheader portfolio-name">2017</h4></a>
               </div>
             </div>
           </div>
@@ -140,7 +138,7 @@
       <div class="spacer spacer-medium"></div>
 
       <div class="wrapper">
-        <p class="align-center"><a href="http://www.chrisheuberger.com">HOME</a></p>
+        <p class="footer-link align-center"><a href="http://www.chrisheuberger.com">HOME</a></p>
       </div>
 
       <div class="spacer spacer-medium"></div>
