--- a/travel/denmark.html
+++ b/travel/denmark.html
@@ -34,9 +34,7 @@
 
   <div id="page-loader">
     <div class="page-loader-inner">
-      <div class="loader">
-        <strong>i will turn this car around...</strong>
-      </div>
+      <div class="loader">i will turn this car around.</div>
     </div>
   </div>
 
@@ -44,7 +42,7 @@
 
     <!-- HERO  -->
     <section class="hero-full parallax-section" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6868.jpg" id="hero">
-      <p class="align-center"><a href="index.html">BACK TO TRAVEL</a></p>
+      <p class="back-button align-center"><a href="index.html">BACK TO TRAVEL</a></p>
       <div class="page-title">
         <h1>Copenhagen, Denmark</h1>
       </div>
@@ -348,7 +346,7 @@
       </div>
 
       <div class="wrapper">
-        <p class="align-center"><a href="index.html">BACK TO TRAVEL</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="http://www.chrisheuberger.com">HOME</a></p>
+        <p class="footer-link align-center"><a href="index.html">BACK TO TRAVEL</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="http://www.chrisheuberger.com">HOME</a></p>
       </div>
 
       <div class="spacer spacer-medium"></div>
