--- a/travel/norway.html
+++ b/travel/norway.html
@@ -34,9 +34,7 @@
 
   <div id="page-loader">
     <div class="page-loader-inner">
-      <div class="loader">
-        <strong>you have arrived...</strong>
-      </div>
+      <div class="loader">you have arrived...</div>
     </div>
   </div>
 
@@ -44,7 +42,7 @@
 
     <!-- HERO  -->
     <section class="hero-full parallax-section" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7390.jpg" id="hero">
-      <p class="align-center"><a href="index.html">BACK TO TRAVEL</a></p>
+      <p class="back-button align-center"><a href="index.html">BACK TO TRAVEL</a></p>
       <div class="page-title">
         <h1>Bergen, Stalheim, and Olso, Norway</h1>
       </div>
@@ -492,7 +490,7 @@
       </div>
 
       <div class="wrapper">
-        <p class="align-center"><a href="index.html">BACK TO TRAVEL</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="http://www.chrisheuberger.com">HOME</a></p>
+        <p class="footer-link align-center"><a href="index.html">BACK TO TRAVEL</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="http://www.chrisheuberger.com">HOME</a></p>
       </div>
 
       <div class="spacer spacer-medium"></div>
