--- a/travel/portland-winter-2016.html
+++ b/travel/portland-winter-2016.html
@@ -34,9 +34,7 @@
 
   <div id="page-loader">
     <div class="page-loader-inner">
-      <div class="loader">
-        <strong>are we there yet?</strong>
-      </div>
+      <div class="loader">are we there yet?</div>
     </div>
   </div>
 
@@ -44,7 +42,7 @@
 
     <!-- HERO  -->
     <section class="hero-full parallax-section" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6017.jpg" id="hero">
-      <p class="align-center"><a href="index.html">BACK TO TRAVEL</a></p>
+      <p class="back-button align-center"><a href="index.html">BACK TO TRAVEL</a></p>
       <div class="page-title">
         <h1>Portland, Oregon<br>December, 2016</h1>
       </div>
@@ -347,7 +345,7 @@
       <div class="spacer spacer-medium"></div>
 
       <div class="wrapper">
-        <p class="align-center"><a href="index.html">BACK TO TRAVEL</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="http://www.chrisheuberger.com">HOME</a></p>
+        <p class="footer-link align-center"><a href="index.html">BACK TO TRAVEL</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="http://www.chrisheuberger.com">HOME</a></p>
       </div>
 
       <div class="spacer spacer-medium"></div>
