--- a/travel/santa-fe.html
+++ b/travel/santa-fe.html
@@ -34,9 +34,7 @@
 
   <div id="page-loader">
     <div class="page-loader-inner">
-      <div class="loader">
-        <strong>welcome to your destination...</strong>
-      </div>
+      <div class="loader">welcome to your destination...</div>
     </div>
   </div>
 
@@ -44,7 +42,7 @@
 
     <!-- HERO  -->
     <section class="hero-full parallax-section" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/santa-fe/IMG_5599.jpg" id="hero">
-      <p class="align-center"><a href="index.html">BACK TO TRAVEL</a></p>
+      <p class="back-button align-center"><a href="index.html">BACK TO TRAVEL</a></p>
       <div class="page-title">
         <h1>Santa Fe, NM<br>November, 2016</h1>
       </div>
@@ -555,7 +553,7 @@
       </div>
 
       <div class="wrapper">
-        <p class="align-center"><a href="index.html">BACK TO TRAVEL</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="http://www.chrisheuberger.com">HOME</a></p>
+        <p class="footer-link align-center"><a href="index.html">BACK TO TRAVEL</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a href="http://www.chrisheuberger.com">HOME</a></p>
       </div>
 
       <div class="spacer spacer-medium"></div>
